# pydantic-db

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
pydantic_db/: __init__.py  _crud_generator.py  _models.py  _query_builder.py  _sqlalchemy_table_generator.py  _table.py  _table_generator.py  _table_manager.py  _types.py  _util.py  errors.py  models.py  pydb.py
pydantic_db/_crud/: __init__.py  field_query_builder.py  model_query_builder.py  result_deserializer.py
tests/: test_errors.py  test_many_relations.py  test_mtm_relations.py  test_otm_relations.py  test_pydantic_db.py
