[tool.poetry]
name = "pydantic-db"
version = "0.18.0"
description = ""
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
case-switcher = "^1.3.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.35"}
PyPika = "^0.48.9"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
coverage = "^6.3.2"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
